--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,7 @@ android:
 #        - android-28
 
 before_install:
-  -  |
-  # Using Ubuntu
-  curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - &&
-  sudo apt-get install -y nodejs
+  -  curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - && sudo apt-get install -y nodejs
 install:
   - npm install
 
