--- a/.travis.yml
+++ b/.travis.yml
@@ -4,29 +4,54 @@
 #  - linux
 #  - osx
 
-os: linux
-language: android
-android:
-  components:
-    - android-28
+#os:
+#  - linux
+#  - osx
 
-#matrix:
-#  include:
-#    - os: osx
-#      language: node_js
-#      node_js: "8"
-#    - os: linux
-#      android:
-#      components:
-#        - android-28
+#language:
+#  - android
+
+matrix:
+  include:
+    - name: "iOS App Build"
+      os: osx
+      env: MODE=OSX
+    - name: "Android App Build"
+      os: linux
+      language: android
+      env: MODE=LINUX
+      android:
+        components:
+          - android-28
+    - name: "General Unit Tests"
+      os: linux
+      language: node_js
+      node_js: "8"
+      env: MODE=TEST
 
 before_install:
-  -  curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - && sudo apt-get install -y nodejs
+  - |
+  if [ "$MODE" == "TEST" ]; then
+    echo "not installing node"
+  else
+    curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - && sudo apt-get install -y nodejs
+  fi
+
+    
 install:
   - npm install
 
 script: 
-  - npm run cordova-build-android
+  - |
+  if [ "$MODE" == "LINUX"]; then
+    npm run cordova-build-android
+  else
+    if [ "$MODE" == "OSX"]; then
+      npm run cordova-build-ios
+    else
+      npm run test:unit
+    fi
+  fi
 #script:
 #  - npm run electron:publish
 
