--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "webworker-promise": "^0.4.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -39,7 +38,7 @@
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-cordova": "^2.1.3",
     "vue-template-compiler": "^2.5.21",
-    "worker-loader": "^2.0.0"
+    "workerize-loader": "^1.0.4"
   },
   "eslintConfig": {
     "root": true,
