--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -15,11 +15,13 @@
     "dependencies": {
         "cordova-android": "^8.0.0",
         "cordova-ios": "^5.0.0",
+        "cordova-plugin-fetch": "git+https://github.com/aporat/cordova-plugin-fetch.git",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-fetch": {}
         },
         "platforms": [
             "android",
