--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-nested-mutations": "^1.0.2",
     "vuex-persistedstate": "^2.5.4",
     "winston": "^3.2.1"
   },
