--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test:unit": " vue-cli-service test:unit"
   },
   "dependencies": {
+    "raw-loader": "^2.0.0",
+    "svg.js": "^2.7.1",
     "vue": "^2.6.6",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
@@ -55,7 +57,8 @@
       "@vue/airbnb"
     ],
     "rules": {
-      "no-param-reassign": "off"
+      "no-param-reassign": "off",
+      "import/prefer-default-export": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
