--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
       "plugin:vue/essential",
       "@vue/airbnb"
     ],
-    "rules": {},
+    "rules": {
+      "no-param-reassign": "off",
+      "import/prefer-default-export": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
