--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     "test:unit": " vue-cli-service test:unit"
   },
   "dependencies": {
-    "chart.js": "^2.8.0",
-    "moment": "^2.24.0",
     "css": "^2.2.4",
     "raw-loader": "^2.0.0",
     "svg.js": "^2.7.1",
     "tar": "^4.4.8",
     "vue": "^2.6.6",
-    "vue-chartjs": "^3.4.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -51,8 +48,7 @@
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-cordova": "^2.1.3",
     "vue-template-compiler": "^2.5.21",
-    "workerize-loader": "^1.0.4",
-    "raw-loader": "^2.0.0"
+    "workerize-loader": "^1.0.4"
   },
   "eslintConfig": {
     "root": true,
