--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "test:unit": " vue-cli-service test:unit"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "css": "^2.2.4",
     "jsonq": "^1.2.0",
-    "raw-loader": "^2.0.0",
+    "moment": "^2.24.0",
     "svg.js": "^2.7.1",
     "tar": "^4.4.8",
     "vue": "^2.6.6",
