--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.8.0",
     "css": "^2.2.4",
     "jsonq": "^1.2.0",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "svg.js": "^2.7.1",
     "tar": "^4.4.8",
