--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "vue": "^2.6.6",
+    "vue-async-computed": "^3.6.1",
     "vue-chartjs": "^3.4.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
