--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "css": "^2.2.4",
+    "js-base64": "^2.5.1",
     "jsonq": "^1.2.0",
     "lodash": "^4.17.11",
     "material-design-icons": "^3.0.1",
