--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.11",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "vue": "^2.6.6",
     "vue-async-computed": "^3.6.1",
     "vue-chartjs": "^3.4.2",
