--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
+    "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-async-computed": "^3.6.1",
     "vue-chartjs": "^3.4.2",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-plugin-pwa": "^3.8.0",
     "@vue/cli-plugin-unit-mocha": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
