--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-scroll-lock": "^2.6.1",
     "chart.js": "^2.8.0",
     "css": "^2.2.4",
     "js-base64": "^2.5.1",
