--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve --mode web",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": " vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "deploy:dev": "npm run build && surge ./dist condc-dev.surge.sh"
   },
   "dependencies": {
     "axios": "^0.18.0",
