--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ script:
 deploy:
   - provider: surge
     project: ./dist/
-    domain: condc-dev.surge.sh
+    domain: https://condc-dev.surge.sh
     on: development
     skip_cleanup: true
   - provider: surge
     project: ./dist/
-    domain: condc.surge.sh
+    domain: https://condc.surge.sh
     on: master
     skip_cleanup: true
 
