--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "deploy:dev": "npm run build && surge ./dist condc-test.surge.sh"
+    "deploy:dev": "npm run build && surge ./dist https://condc-test.surge.sh"
   },
   "dependencies": {
     "axios": "^0.18.0",
